ゲーム画面のflexbox化

--- a/c_team/app/views/layouts/stage.html.erb
+++ b/c_team/app/views/layouts/stage.html.erb
@@ -17,7 +17,9 @@
       <%= render 'shared/stage_header' %>
       <!-- 本体 -->
       <%= render 'shared/flash' %>
-      <%= yield %>
+      <div class="inner-stagewrapper">
+        <%= yield %>
+      </div>
       <!-- フッタ -->
       <%# render 'shared/footer' %>
     </div>
