--- a/c_team/app/views/stages/stage1.html.erb
+++ b/c_team/app/views/stages/stage1.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage1/stage1' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/stage1/stage1' %>
+  </div>
 </div>
 <%= form_tag stage1_novel_path, id: :stage1_novel, method: :get %>
