--- a/c_team/app/views/stages/stage2.html.erb
+++ b/c_team/app/views/stages/stage2.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage2/stage2' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/stage2/stage2' %>
+  </div>
 </div>
 <%= form_tag stage3_novel_path, id: :stage3_novel, method: :get %>
