--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage3/stage3' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/stage3/stage3' %>
+  </div>
 </div>
 <%= form_tag ending_novel_path, id: :ending_novel, method: :get %>
