--- a/c_team/app/views/stages/title.html.erb
+++ b/c_team/app/views/stages/title.html.erb
@@ -7,16 +7,18 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/title/title' %>
-</div>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/title/title' %>
+  </div>
 
-<div>
-  <form id="intro_novel" action="/stages/intro_novel" accept-charset="UTF-8" method="get">
-  </form>
-</div>
+  <div>
+    <form id="intro_novel" action="/stages/intro_novel" accept-charset="UTF-8" method="get">
+    </form>
+  </div>
 
-<div>
-  <form id="tutorial1_novel" action="/stages/tutorial1_novel" accept-charset="UTF-8" method="get">
-  </form>
+  <div>
+    <form id="tutorial1_novel" action="/stages/tutorial1_novel" accept-charset="UTF-8" method="get">
+    </form>
+  </div>
 </div>
