--- a/c_team/app/views/stages/tutorial1_novel.html.erb
+++ b/c_team/app/views/stages/tutorial1_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial1_novel/tutorial1_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial1_novel/tutorial1_novel' %>
+  </div>
 </div>
 <%= form_tag tutorial1_path, id: :tutorial1_novel, method: :get %>
