--- a/c_team/app/views/stages/tutorial2.html.erb
+++ b/c_team/app/views/stages/tutorial2.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial2/tutorial2' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial2/tutorial2' %>
+  </div>
 </div>
 <%= form_tag tutorial3_novel_path, id: :tutorial3_novel, method: :get %>
