--- a/c_team/app/views/stages/tutorial2_novel.html.erb
+++ b/c_team/app/views/stages/tutorial2_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial2_novel/tutorial2_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial2_novel/tutorial2_novel' %>
+  </div>
 </div>
 <%= form_tag tutorial2_path, id: :tutorial2, method: :get %>
