--- a/c_team/app/views/stages/tutorial3.html.erb
+++ b/c_team/app/views/stages/tutorial3.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial3/tutorial3' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial3/tutorial3' %>
+  </div>
 </div>
 <%= form_tag tutorial3A_novel_path, id: :tutorial3, method: :get %>
