--- a/c_team/app/views/stages/tutorial3A_novel.html.erb
+++ b/c_team/app/views/stages/tutorial3A_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial3A_novel/tutorial3A_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial3A_novel/tutorial3A_novel' %>
+  </div>
 </div>
 <%= form_tag title_path, id: :title, method: :get %>
