--- a/c_team/app/assets/stylesheets/stages.scss
+++ b/c_team/app/assets/stylesheets/stages.scss
@@ -2,9 +2,18 @@
 // body {
 //     overflow: hidden;
 // }
-
 .stagewrapper {
     overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.inner-stagewrapper {
+  display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
 
 h3 {
@@ -18,21 +27,35 @@ h3 {
 #head {
     background: #FFFFFF;
     border: 2px solid #aaaaaa;
-    height: 10vh;
+    height: 100px;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    flex: 0 0 100px;
+    padding: 0;
+    & a {
+        height: 100%;
+    }
 }
 
 #logo {
-    height: 99%;
-    margin-left: 2px;
-    margin-right: 20px;
-    float: left;
+    height: 100%;
+    flex: 0 0 0;
 }
 
 #link {
-    height: 99%;
-    margin: auto 10px;
-    float: right;
-    width: 200px;
+    height: 100px;
+    // margin: auto 10px;
+    // width: 200px;
+    flex: 0 0 0;
+}
+
+.header-wr {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 500px;
+    margin: 5px 10px;
 }
 
 #mis {
@@ -41,12 +64,12 @@ h3 {
     background: #ffffff;
     font-size: 1.2em;
     font-weight: 100;
-    width: 400px;
+    // width: 400px;
     display: flex;
     align-items: center;
-    margin: 5px 10px;
+    // margin: 5px 10px;
     font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
-    padding-left: 20px;
+    // padding-left: 20px;
 }
 
 #story {
@@ -60,7 +83,7 @@ h3 {
     align-items: center;
     justify-content: center;
     border-radius: 50px;
-    margin: 7px 10px;
+    // margin: 7px 10px;
     font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
 }
 
@@ -68,37 +91,43 @@ h3 {
     border: 2px solid #aaaaaa;
     border-top: none;
     border-bottom: none;
-    width: 15%;
-    height: 90vh;
-    float: left;
+    // width: 200px;
+    flex: 0 0 250px;
 }
 
-#motion-pic {
-    max-width: 100%;
-    max-height: 100%;
+#puzz {
+    // width: 100%;
+    height: 60%;
+    border-bottom: 1px solid #aaaaaa;
+    & img {
+        max-height: 85%;
+        max-width: 100%;
+    }
 }
+
+#help {
+    // width: 100%;
+    height: 40%;
+}
+
+// #motion-pic {
+//     max-width: 100%;
+//     max-height: 100%;
+// }
 
 #help-pic {
     margin-top: 10px;
     margin-left: 30px;
 }
 
+.enchant-wrapper {
+    flex: 1 1 0;
+    // flex-grow: 1;
+}
+
 #enchant-stage {
-    width: 85%;
-    height: 90vh;
-    max-width: 85%;
-    float: left;
-}
-
-#puzz {
+    height: 100%;
     width: 100%;
-    height: 60%;
-    border-bottom: 1px solid #aaaaaa;
-}
-
-#help {
-    width: 100%;
-    height: 40%;
 }
 
 .balloon {
