--- a/c_team/app/views/shared/_stage_header.html.erb
+++ b/c_team/app/views/shared/_stage_header.html.erb
@@ -1,5 +1,7 @@
 <div id="head">
   <%= link_to image_tag('ppp_logo02.svg', alt: 'ロゴがきます', id: 'logo'), root_path %>
+  <div class="header-wr">
+    <%= yield :stage_header %>
+  </div>
   <%= link_to image_tag('select.svg', alt: 'セレクトリンク', id: 'link'), title_path %>
-  <%= yield :stage_header %>
 </div>
