--- a/c_team/app/views/stages/intro_novel.html.erb
+++ b/c_team/app/views/stages/intro_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/intro_novel/intro_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/intro_novel/intro_novel' %>
+  </div>
 </div>
 <%= form_tag stage1_path, id: :stage1, method: :get %>
