--- a/c_team/app/views/stages/stage1_novel.html.erb
+++ b/c_team/app/views/stages/stage1_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage1_novel/stage1_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/stage1_novel/stage1_novel' %>
+  </div>
 </div>
 <%= form_tag stage2_novel_path, id: :stage2_novel, method: :get %>
