--- a/c_team/app/views/stages/stage3_novel.html.erb
+++ b/c_team/app/views/stages/stage3_novel.html.erb
@@ -7,7 +7,9 @@
 <div id="motion">
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage3_novel/stage3_novel' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/stage3_novel/stage3_novel' %>
+  </div>
 </div>
 <%= form_tag stage3_path, id: :stage3, method: :get %>
