--- a/c_team/app/views/stages/tutorial1.html.erb
+++ b/c_team/app/views/stages/tutorial1.html.erb
@@ -20,7 +20,10 @@
   </div>
 </div>
 
-<div id="enchant-stage">
-  <%= javascript_include_tag 'stage/tutorial1/tutorial1' %>
+<div class="enchant-wrapper">
+  <div id="enchant-stage">
+    <%= javascript_include_tag 'stage/tutorial1/tutorial1' %>
+  </div>
 </div>
+
 <%= form_tag tutorial2_novel_path, id: :tutorial2_novel, method: :get %>
