--- a/c_team/app/assets/stylesheets/stages.scss
+++ b/c_team/app/assets/stylesheets/stages.scss
@@ -8,6 +8,8 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+    min-width: 1360px;
+    min-height: 760px;
 }
 
 .inner-stagewrapper {
