--- a/c_team/app/views/stages/ending_novel.html.erb
+++ b/c_team/app/views/stages/ending_novel.html.erb
@@ -10,4 +10,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/ending_novel/ending_novel' %>
 </div>
-<%= form_tag title_path, id: :title, method: :get %>
+<%= form_tag staff_path, id: :staff, method: :get %>
