お父さん実装

--- a/c_team/app/views/stages/stage3_novel.html.erb
+++ b/c_team/app/views/stages/stage3_novel.html.erb
@@ -10,4 +10,13 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/stage3_novel/stage3_novel' %>
 </div>
-<%= form_tag stage3_path, id: :stage3, method: :get %>
+
+<div>
+  <form id="stage3" action="/stages/stage3" accept-charset="UTF-8" method="get">
+  </form>
+</div>
+
+<div>
+  <form id="ending" action="/stages/ending_novel" accept-charset="UTF-8" method="get">
+  </form>
+</div>
