--- a/c_team/app/views/stages/stage2.html.erb
+++ b/c_team/app/views/stages/stage2.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ2</p>
-  <p id="mis">ミッション：1番のバス停から順番に通るようにバスを導こう！！</p>
+  <p id="mis">ミッション：1番のバス停から順番に通るようにバスをみちびこう！！</p>
 <% end %>
 
 <div id="motion">
@@ -13,8 +13,8 @@
   <div id="help">
     <h3>〜ヘルプ〜</h3>
     <div class="balloon" onclick="help_button()">
-      <p id="help_text_before">ここをクリックしたら「ヘルプ」が表示されるよ！</p>
-      <p id="help_text_after" style="display: none">発車したら、すぐに右に移動するルートも考えてみよう！</p>
+      <p id="help_text_before">ここをクリックしたら「ヘルプ」がひょうじされるよ！</p>
+      <p id="help_text_after" style="display: none">発車したら、すぐに右にいどうするルートも考えてみよう！</p>
     </div>
     <%= image_tag('favicon.png', id: 'help-pic') %>
   </div>
