--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ3</p>
-  <p id="mis">ミッション：ずんだ堂とスーパーに寄って、果物と和菓子を買おう！そして、小豆ちゃんを病院に導こう！！</p>
+  <p id="mis">ミッション：ずんだ堂とスーパーによって、果物とわがしを買おう！そして、小豆ちゃんを病院にみちびこう！！</p>
 <% end %>
 
 <div id="motion">
@@ -13,7 +13,7 @@
   <div id="help">
     <h3>〜ヘルプ〜</h3>
     <div class="balloon" onclick="help_button()">
-      <p id="help_text_before">ここをクリックしたら「ヘルプ」が表示されるよ！</p>
+      <p id="help_text_before">ここをクリックしたら「ヘルプ」がひょうじされるよ！</p>
       <p id="help_text_after" style="display: none">青いかんばんにぶつかると矢印の方を向くよ</p>
     </div>
     <%= image_tag('favicon.png', id: 'help-pic') %>
