--- a/c_team/app/views/stages/tutorial1.html.erb
+++ b/c_team/app/views/stages/tutorial1.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">チュートリアル1</p>
-  <p id="mis">ミッション：主人公をゴールに届けよう!!</p>
+  <p id="mis">ミッション：主人公をゴールにとどけよう!!</p>
 <% end %>
 
 <div id="motion">
@@ -13,8 +13,8 @@
   <div id="help">
     <h3>〜ヘルプ〜</h3>
     <div class="balloon" onclick="help_button()">
-      <p id="help_text_before">ここをクリックしたら「ヘルプ」が表示されるよ！</p>
-      <p id="help_text_after" style="display: none">「▶︎実行」ボタンを押してみよう！</p>
+      <p id="help_text_before">ここをクリックしたら「ヘルプ」がひょうじされるよ！</p>
+      <p id="help_text_after" style="display: none">「▶︎実行」ボタンをおしてみよう！</p>
     </div>
     <%= image_tag('favicon.png', id: 'help-pic') %>
   </div>
