小豆をあずきに統一

--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ3</p>
-  <p id="mis">ミッション：ずんだ堂とスーパーによって、果物とわがしを買おう！そして、小豆ちゃんを病院にみちびこう！！</p>
+  <p id="mis">ミッション：ずんだ堂とスーパーによって、果物とわがしを買おう！そして、あずきちゃんを病院にみちびこう！！</p>
 <% end %>
 
 <div id="motion">
