SCSS調整, ミッションの文中に画像を表示

--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ3</p>
-  <p id="mis">ミッション：ずんだ堂とスーパーに寄って、果物と和菓子を買おう！そして、小豆ちゃんを病院に導こう！！</p>
+  <p id="mis">ミッション：ずんだ堂<%= image_tag 'zunda.png', alt: 'ずんだ堂の画像'%>とスーパー<%= image_tag 'superm.png', alt: 'スーパーの画像'%>に寄って、果物と和菓子を買おう！そして、小豆ちゃんを病院<%= image_tag 'hospital.png', alt: '病院の画像'%>に導こう！！</p>
 <% end %>
 
 <div id="motion">
