--- a/c_team/app/assets/stylesheets/stages.scss
+++ b/c_team/app/assets/stylesheets/stages.scss
@@ -27,6 +27,7 @@ h3 {
 }
 
 #head {
+    box-sizing: border-box;
     background: #FFFFFF;
     border: 2px solid #aaaaaa;
     height: 100px;
@@ -38,26 +39,24 @@ h3 {
     & a {
         height: 100%;
     }
-}
 
-#logo {
-    height: 100%;
-    flex: 0 0 0;
-}
+    & img {
+        height: 100%;
+        flex: 0 0 0;
+    }
 
-#link {
-    height: 100px;
-    // margin: auto 10px;
-    // width: 200px;
-    flex: 0 0 0;
+    // & p img {
+    //     height: 40px;
+    // }
 }
 
 .header-wr {
     height: 100%;
     display: flex;
     flex-direction: column;
+    // justify-content: center;
     flex: 1 1 500px;
-    margin: 5px 10px;
+    // margin: 2px 10px;
 }
 
 #mis {
@@ -75,18 +74,19 @@ h3 {
 }
 
 #story {
-    height: 40%;
+    // height: 40%;
     color: #FFF;
-    font-size: 1.4em;
+    font-size: 1.5em;
     font-weight: 100;
     background: #ff0000;
-    width: 250px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 275px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     border-radius: 50px;
     // margin: 7px 10px;
     font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
+    text-align: center;
 }
 
 #motion {
