--- a/c_team/app/views/stages/stage1.html.erb
+++ b/c_team/app/views/stages/stage1.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ1</p>
-  <p id="mis">ミッション：お花屋さんを通って、お花を買おう。そして、小豆ちゃんをゴールに届けよう!!</p>
+  <p id="mis">ミッション：お花屋さん<%= image_tag 'flolist.png', alt: 'お花屋さんの画像'%>を通って、お花を買おう。そして、小豆ちゃんをゴール<%= image_tag 'flag.png', alt: 'ゴールの画像'%>に届けよう!!</p>
 <% end %>
 
 <div id="motion">
