ミッションを修正

--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ3</p>
-  <p id="mis">ミッション：ずんだ堂<%= image_tag 'zunda.png', alt: 'ずんだ堂の画像'%>とスーパー<%= image_tag 'superm.png', alt: 'スーパーの画像'%>によって、果物とわがしを買おう！そして、あずきちゃんを病院<%= image_tag 'hospital.png', alt: '病院の画像'%>にみちびこう！！</p>
+  <p id="mis">ミッション：ずんだ堂<%= image_tag 'zunda.png', alt: 'ずんだ堂の画像' %>とスーパー<%= image_tag 'superm.png', alt: 'スーパーの画像' %>を通って、果物とわがしを買おう！そして、病院<%= image_tag 'hospital.png', alt: '病院の画像'%>にみちびこう！！</p>
 <% end %>
 
 <div id="motion">
