--- a/c_team/app/views/layouts/application.html.erb
+++ b/c_team/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="content-language" content="ja">
     <title><%= page_title %></title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= favicon_link_tag 'favicon.png', :rel => 'shortcut icon' %>
   </head>
