c_team <meta name=”description”>を追加

--- a/c_team/app/views/layouts/application.html.erb
+++ b/c_team/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name=”description” content="あずきのおみまいは、松永プロジェクトで製作している「P++」のコンテンツの一つで、プログラムの通り動く物語の人物を障害物の配置でゴールへと導くブラウザゲームです。ゴールの仕方によっては、物語の流れが変わるためエンディングが複数あります。エンディングコンプリートを目指しましょう！">
     <title><%= page_title %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
