スタイルの設定

--- a/web/less/production.less
+++ b/web/less/production.less
@@ -160,6 +160,12 @@ header {
         border-bottom-color: @navcolor;
       }
     }
+
+    & video {
+        width: 80%;
+        display: block;
+        margin: auto;
+    }
 }
 
 .flex-box .content {
@@ -250,6 +256,11 @@ footer {
     }
     .flex-box .content {
         flex: 1 1 200px;
+    }
+
+    .content video {
+        width: 100%;
+        display: block;
     }
 
     .left-flex {
